--- a/abaut.html
+++ b/abaut.html
@@ -10,16 +10,16 @@
 <body>
     <ul>
         <li>
-            <a href="/html%20basic%201/">Home</a>
+            <a href="/">Home</a>
         </li>
         <li>
-            <a href="/html%20basic%201/pages/Product.html">Product</a>
+            <a href="/pages/Product.html">Product</a>
         </li>
         <li>
-            <a href="/html%20basic%201/pages/orders.html">Orders</a>
+            <a href="/pages/orders.html">Orders</a>
         </li>
         <li>
-            <a href="/html%20basic%201/abaut.html">Abaut</a>
+            <a href="/abaut.html">Abaut</a>
         </li>
     </ul>
     <h1>abaut</h1>
