--- a/abaut.html
+++ b/abaut.html
@@ -13,7 +13,7 @@
             <a href="/">Home</a>
         </li>
         <li>
-            <a href="/pages/Product.html">Product</a>
+            <a href="/pages/product.html">Product</a>
         </li>
         <li>
             <a href="/pages/orders.html">Orders</a>
